# cancerModels

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/proteosurf/: __init__.py  agent.py  app.py  chimerax_session.py  chimerax_tools.py  claude_agent.py  databricks_analytics.py  docking.py  market_intel.py  mcp_server.py  nemotron.py  nia_search.py  run_web.py  tools.py  voice.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: viewer.html
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AudioPlayer.tsx  ChatPanel.tsx  LandingPage.tsx  MolstarViewer.tsx  ToolCard.tsx
frontend/src/hooks/: useChat.ts
